更新启动脚本和配置文件，微调服务器启动参数，并更新容器编排文件
Signed-off-by: MC-Nirvana <mcnirvana@126.com>